--- a/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.ui
+++ b/Leventure_DevelopKey/Leventure_DevelopKey/Leventure_DevelopKey.ui
@@ -126,7 +126,7 @@
      <rect>
       <x>0</x>
       <y>30</y>
-      <width>511</width>
+      <width>631</width>
       <height>411</height>
      </rect>
     </property>
@@ -622,13 +622,13 @@
        <string>结果</string>
       </property>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>10</x>
         <y>10</y>
         <width>301</width>
-        <height>91</height>
+        <height>103</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -652,6 +652,13 @@
           </widget>
          </item>
         </layout>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_recovery">
+         <property name="text">
+          <string>恢复</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="btn_json_analyse">
